# ReSys.Shop

./: .gitignore  ADMIN_ORDERING_ANALYSIS.md  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  ERP_ALIGNMENT_ANALYSIS.md  GEMINI.md  GOLDEN_STANDARD.md  LICENSE  ORDERING_SYSTEM_OVERVIEW.md  PAYMENT_IMPLEMENTATION_PLAN.md  PROJECT_STATUS_REPORT.md  QUICKSTART.md  README.md  REFERENCE_ORDERING_ANALYSIS.md  ReSys.Shop.sln  SHIPPING_SETTINGS_DOCS.md  SRC_ORDERING_ANALYSIS.md  test.runsettings
apps/ReSys.Admin/: components.d.ts  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/ReSys.Shop/: README.md  components.d.ts  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: ARCHITECTURE_PATTERNS.md  ARCHITECTURE_REFERENCE_VIEWS.md  CTU_THESIS_GUIDELINES.md  Generate-CtUThesis.ps1  RUNNING_GUIDE.md  generate-ctu-thesis-latex.sh  generate-ctu-thesis.sh
docs/ideas/: iam_system_enhancement.md  identity_management.md
infrastructure/database/: docker-compose.db.yml  setup-guide.md
infrastructure/mail/: docker-compose.mail.yml  setup-guide.md
plans/: notification-builders.md  notification-models-refinement.md  notification-refinement.md  notification-services-update.md  notification-services.md
scripts/: run-all-local.ps1  run-tests.ps1  setup-dev-env.ps1
src/services/ReSys.ML/: Dockerfile  pyproject.toml  requirements.txt  run-ml.bat
src/services/ReSys.ML/notebooks/: experiment.ipynb
src/services/ReSys.ML/src/: engine.py  main.py  models.py  routers.py  telemetry.py
(+1992 files in other folders)
