[project]
name = "resys-ml"
version = "0.1.0"
description = "Microservice for generating Example embeddings and similarity search."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-multipart",
    "torch",
    "sentence-transformers",
    "numpy",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-logging",
    "opentelemetry-exporter-otlp",
    "opentelemetry-exporter-otlp-proto-grpc",
]

[tool.uv]
managed = true
